# Lumiditor

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSES.md  vcpkg.json
.github/workflows/: cmake-multi-platform.yml  discord_commit_notify.yml  discord_tests_notify.yml  plantuml.yml  windows-test.yml
externalWindowLauncher/: CMakeLists.txt  launcher.cpp  launcher.h
externalWindows/: CMakeLists.txt  externalWindows.h  main.cpp
externalWindows/include/dialog/: confirmationDialog.h  dialog.h
include/: button.h  label.h  mainMenu.h  uiElement2D.h  uiManager.h
lumidiGui/: CMakeLists.txt
lumidiGui/docs/: class_diagram.puml  notes.md
lumidiGui/include/colliders/: collider.h  collider2D.h  collider3D.h  defaultColliders.h  rectangleCollider.h  uiCollider.h  uiColliders.h
lumidiGui/include/colors/: colors.h
lumidiGui/include/components/: anchors.h  button.h  checkbox.h  element.h  label.h  line.h  rectangle.h  scene.h  slider.h  uiComponents.h  uiElement2D.h  uiManager.h
lumidiGui/include/components/2D/: button.h  checkbox.h  element2D.h  label.h  line.h  panel.h  rectangle.h  slider.h
lumidiGui/include/events/: clickBehavior.h  defaultBehaviors.h  dragBehavior.h  globalEventManager.h  hoverBehavior.h  luaManager.h  uiBehavior.h  uiEvents.h
lumidiGui/include/fluentAPI/: fluentHandler.h  fluentHandlerUIElements.h
lumidiGui/include/fluentAPI (depricated)/: fluentHandler.h
lumidiGui/include/helpers/: concepts.h  helpers.h  operatorOverloads.h
lumidiGui/include/input/: inputManager.h
lumidiGui/include/persistence/: jsonParser.cpp  jsonParser.h  serializer.h  xmlSerializer.h
lumidiGui/include/shapes/: shapes.h
lumidiGui/include/windows/: windowCreator.h
lumidiGui/licenses/: LICENSES.md
lumidiGui/src/colliders/: defaultColliders.cpp  rectangleCollider.cpp
lumidiGui/src/components/: button.cpp  checkbox.cpp  element.cpp  label.cpp  line.cpp  rectangle.cpp  scene.cpp  slider.cpp  uiElement2D.cpp  uiManager.cpp
lumidiGui/src/components/2D/: button.cpp  checkbox.cpp  label.cpp  line.cpp  panel.cpp  rectangle.cpp
lumidiGui/src/events/: clickBehavior.cpp  defaultBehaviors.cpp  dragBehavior.cpp  hoverBehavior.cpp
lumidiGui/src/input/: inputManager.cpp
lumidiGui/src/persistence/: serializer.cpp  xmlSerializer.cpp
lumidiGui/src/shapes/: shapes.cpp
lumidiGui/tests/: testnote.md
lumidiGui/tests/components/: test_button.cpp  test_element.cpp  test_scene.cpp  test_uiManager.cpp
lumidiGui/tests/persistence/: test_xmlSerializer.cpp
ressources/: Lumiditor.xcf
src/: main.cpp
src/components/: uiElement2D.cpp  uiManager.cpp
src/components/UI/: button.cpp  label.cpp
tests/components/UI/: test_button.cpp
